--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -92,7 +92,7 @@
                     <span class="menu-title sub">Delivery Slot</span>
                 </a>
             </li>
-            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
+            <li class="nav-item" [ngClass]="{'active':pageNav==='orders'}">
                 <a class="nav-link" routerLink="/orders">
                     <i class="icon-drawer menu-icon"></i>
                     <span class="menu-title">Orders </span>
@@ -107,14 +107,14 @@
                 <li routerLink="/aboutUs" routerLinkActive='active'><a>About Us</a></li>
                 <li routerLink="/deliveryInfo" routerLinkActive='active'><a>Delivery Information</a></li>
                 <li routerLink="/privacy" routerLinkActive='active'><a>Privacy & Policy</a></li>
-                <li routerLink="/returns" routerLinkActive='active'><a>Returns</a></li>
+                <!-- <li routerLink="/returns" routerLinkActive='active'><a>Returns</a></li> -->
             </ul>
             <li class="nav-item" [ngClass]="{'active':pageNav==='users' || pageNav==='addusers'}">
                 <a class="nav-link" routerLink="/users">
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Loyalty Management</span>
                 </a>
-            </li> -->
+            </li>
 
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
                     <a class="nav-link" routerLink="/wholesellers">
