--- a/src/app/components/city/city.component.html
+++ b/src/app/components/city/city.component.html
@@ -34,7 +34,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="todo-list" *ngFor="let city of cities | filter:filter;let i = index">
+                                            <tr class="todo-list" *ngFor="let city of cities | filter:filter | paginate: { itemsPerPage: 10, currentPage: p };let i = index">
                                                 <td>{{i+1}}</td>
                                                 <td>{{city.contry}}</td>
                                                 <td>
@@ -46,6 +46,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <pagination-controls (pageChange)="p = $event" style="float:right; margin-top:15px;"></pagination-controls>
                                 </div>
                             </div>
 
@@ -57,7 +58,7 @@
             <!-- partial:partials/_footer.html -->
             <footer class="footer">
                 <div class="container-fluid clearfix">
-                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2019
                         <a routerLink="#">Dhukan </a>. All rights reserved. </span>
                     <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
 
