--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -21,6 +21,8 @@
                         </a>
                         <h4 class="card-title">
                             Total Coupons </h4>
+                        <span>
+                            <input class="form-control" type="text" placeholder="Search.." name="search" [(ngModel)]="filter"></span>
                         <br />
                         <div class="row">
                             <div class="col-12">
@@ -40,7 +42,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="todo-list" *ngFor="let coupons of coupons;let i = index">
+                                            <tr class="todo-list" *ngFor="let coupons of coupons | filter:filter | paginate: { itemsPerPage: 10, currentPage: p };let i = index">
                                                 <td>{{i+1}}</td>
                                                 <td>{{coupons.voucher_code}}</td>
                                                 <td>{{coupons.discount_type===1?'Flat':'Percentage' }}</td>
@@ -56,6 +58,7 @@
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <pagination-controls (pageChange)="p = $event" style="float:right; margin-top:15px;"></pagination-controls>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +69,7 @@
             <!-- partial:partials/_footer.html -->
             <footer class="footer">
                 <div class="container-fluid clearfix">
-                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2019
                         <a routerLink="#">Dhukan </a>. All rights reserved. </span>
                     <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
 
