--- a/src/app/components/slot/slot.component.html
+++ b/src/app/components/slot/slot.component.html
@@ -28,43 +28,40 @@
                                         <thead class="thead-dark">
                                             <tr>
                                                 <th>S.no</th>
-                                                <th>Name</th>
-                                                <th>Email</th>
+                                                <th>Slot Name</th>
+                                                <th>Date</th>
                                                 <!-- <th>Password</th> -->
-                                                <th>Phone</th>
-                                                <th>Logo</th>
+                                                <th>Start Time</th>
+                                                <th>End Time</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="todo-list" *ngFor="let item of delData;let i = index">
+                                            <tr class="todo-list" *ngFor="let item of slots | paginate: { itemsPerPage: 10, currentPage: p } ;let i = index">
                                                 <td>{{i+1}}</td>
-                                                <td>{{item.first_name}}</td>
-                                                <td>{{item.email}}</td>
-                                                <td>{{item.phone}}</td>
+                                                <td>{{item.time[0].slot_name}}</td>
+                                                <td>{{item.date}}</td>
+                                                <td>{{item.time[0].start_time}}</td>
+                                                <td>{{item.time[0].end_time}}</td>
                                                 <td>
-                                                    <img [src]="url+item.image"> </td>
-                                                <td>
-                                                    <a routerLink="/addDelivery" class="btn btn-outline-primary" (click)="edit(item.u_id)">Edit</a>
-                                                    <a (click)="delete(item.u_id)" class="btn btn-outline-primary vendor-delete">Delete</a>
+                                                    <a routerLink="/addDelivery" class="btn btn-outline-primary" (click)="edit(item.id)" style="margin-right:10px">Edit</a>
+                                                    <a (click)="deleteSlot(item.id)" class="btn btn-outline-primary vendor-delete">Delete</a>
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
+                                    <pagination-controls (pageChange)="p = $event" style="float:right; margin-top:15px;"></pagination-controls>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
             <!-- content-wrapper ends -->
             <!-- partial:partials/_footer.html -->
             <footer class="footer">
                 <div class="container-fluid clearfix">
-                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
+                    <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2019
                         <a routerLink="#">Dhukan </a>. All rights reserved. </span>
                     <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
 
